# Datascience

./: Bank_Churn.ipynb  pyproject.toml
