[project]
name = "datascience"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "qtconsole>=5.7.0",
    "seaborn>=0.13.2",
]
